# talos

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  code_of_conduct.md  config.toml  config.toml.example  contributing.md  docker-compose.yml  talos_dev.db  talos_encrypted_data  talos_private_key.enc  test_license.json
.claude/: README.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml
docs/: KERYX_DJANGO_SPEC.md  KERYX_INTEGRATION_SPEC.md  TALOS_KERYX_INTEGRATION_SPEC.md
docs/api/: openapi.json  rest-api.md
docs/examples/air-gapped/: Cargo.toml  README.md
docs/examples/air-gapped/src/: main.rs
docs/examples/basic-client/: Cargo.toml  README.md
docs/examples/basic-client/src/: main.rs
docs/examples/feature-gating/: Cargo.toml  README.md
docs/examples/feature-gating/src/: main.rs
docs/guide/: admin-api.md  client-integration.md  getting-started.md  server-deployment.md  troubleshooting.md
docs/private/: .gitkeep
docs/public/: ROADMAP.md
examples/: config_test.rs  example_client.rs  manual_activate.rs
migrations/: 20241114103315_init.sql  20250103000000_extended_schema.sql  20260103000000_quota_fields.sql  20260103000001_api_tokens.sql  init_postgres.sql  init_sqlite.sql  schema.sql
migrations/postgres/: 20250103000000_extended_schema.sql  20260103000000_quota_fields.sql  20260103000001_api_tokens.sql
scripts/sql/: init_postgres.sql  init_sqlite.sql  schema.sql
src/: client.rs  config.rs  encrypted_storage.rs  encryption.rs  errors.rs  hardware.rs  heartbeat.rs  key_generation.rs  lib.rs  license_key.rs  main.rs  server_sim.rs  tiers.rs
src/client/: cache.rs  client.rs  encrypted_storage.rs  errors.rs  heartbeat.rs  key_generation.rs  license.rs  main.rs  responses.rs  storage.rs
src/hardware/: linux.rs  macos.rs  windows.rs
src/jobs/: grace_period.rs  license_expiration.rs  mod.rs  stale_devices.rs
src/server/: admin.rs  api_error.rs  auth.rs  bootstrap.rs  client_api.rs  database.rs  handlers.rs  ip_whitelist.rs  logging.rs  main.rs  mod.rs  openapi.rs  rate_limit.rs  routes.rs  server_sim.rs  tokens.rs  validation.rs
tests/: admin_api_tests.rs  config_tests.rs  database_tests.rs  encrypted_storage_tests.rs  heartbeat_tests.rs  integration.rs  integration_tests.rs  jobs_tests.rs  server_tests.rs  unit.rs  unit_tests.rs
