[package]
name = "talos"
version = "0.1.0"
edition = "2021"
authors = ["David Riding <netviperllc@gmail.com>"]
description = "A Rust-based secure licensing system."
repository = "https://github.com/dmriding/talos"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/talos"
homepage = "https://github.com/dmriding/talos"
keywords = ["licensing", "rust", "security", "software-protection"]
categories = ["access-control", "cryptography", "software-development"]

[dependencies]
# === Core Dependencies ===
tokio = { version = "1.41.1", features = ["full"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
config = "0.15.19"

# === Cryptography Utilities ===
ring = "0.17.8"
aes-gcm = "0.10.3"
hex = "0.4.3"
rand = "0.9.2"
base64 = "0.22.1"


# === HTTP Client ===
reqwest = { version = "0.11.27", features = [
    "json",
    "rustls-tls",
], default-features = false }

# === Logging and Tracing ===
log = "0.4.22"
env_logger = "0.11.5"
tracing = "0.1.40"
tracing-subscriber = "0.3.22"
lazy_static = "1.4.0"

# === Error Derive ===
thiserror = "2.0.17"

# === Web Framework Dependencies ===
axum = { version = "0.7", features = ["macros"] }
tower = "0.5.1"
hyper = { version = "1.5.0" }
uuid = { version = "1.11.0", features = ["v4"] }
tokio-util = "0.7.12"

# === Database Dependencies ===
sqlx = { version = "0.8.2", features = [
    "runtime-tokio-rustls",
    "macros",
    "sqlite",
    "postgres",
    "chrono",
] }

# === Date and Time Utilities ===
chrono = { version = "0.4.38", features = ["serde"] }

# === Development Dependencies ===
[dev-dependencies]
tokio-test = "0.4.4"

# === Binary Definitions ===
[[bin]]
name = "talos_server"
path = "src/server/main.rs"

[[bin]]
name = "talos_client"
path = "src/client/main.rs"
