[package]
name = "netviper-talos"
version = "0.1.0"
edition = "2021"
authors = ["David Riding <david@netviper.gr>"]
description = "A Rust-based secure licensing system."
repository = "https://github.com/dmriding/talos"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/netviper-talos"
homepage = "https://github.com/dmriding/talos"
keywords = ["licensing", "rust", "security", "software-protection"]
categories = ["access-control", "cryptography", "software-development"]

[lib]
name = "talos"
path = "src/lib.rs"

# === Feature Flags ===
[features]
default = ["server", "sqlite"]

# Core server functionality (handlers, routes, database abstraction)
server = ["dep:axum", "dep:tower", "dep:hyper", "dep:sqlx"]

# Database backends (at least one required when using server)
sqlite = ["sqlx?/sqlite"]
postgres = ["sqlx?/postgres"]

# JWT authentication for admin API endpoints
jwt-auth = ["dep:jsonwebtoken", "server"]

# Admin API for license CRUD operations
admin-api = ["server"]

# Rate limiting for public endpoints
rate-limiting = ["dep:tower_governor", "dep:governor", "server"]

# Background jobs for license expiration and cleanup
background-jobs = ["dep:tokio-cron-scheduler", "server"]

# OpenAPI documentation with Swagger UI
openapi = ["dep:utoipa", "dep:utoipa-swagger-ui", "server"]

# Future features (reserved, not yet implemented)
# quota-tracking = []

[dependencies]
# === Core Dependencies ===
tokio = { version = "1.41.1", features = ["full"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
config = "0.15.19"

# === Cryptography Utilities ===
ring = "0.17.8"
aes-gcm = "0.10.3"
hex = "0.4.3"
sha2 = "0.10.8"
rand = "0.9.2"
base64 = "0.22.1"


# === HTTP Client ===
reqwest = { version = "0.11.27", features = [
    "json",
    "rustls-tls",
], default-features = false }

# === Logging and Tracing ===
log = "0.4.22"
env_logger = "0.11.5"
tracing = "0.1.40"
tracing-subscriber = "0.3.22"
lazy_static = "1.4.0"

# === Error Derive ===
thiserror = "2.0.17"

# === Web Framework Dependencies (optional, requires "server" feature) ===
axum = { version = "0.7", features = ["macros"], optional = true }
tower = { version = "0.5.1", optional = true }
hyper = { version = "1.5.0", optional = true }
uuid = { version = "1.11.0", features = ["v4"] }
tokio-util = "0.7.12"

# === Database Dependencies (optional, requires "server" feature) ===
sqlx = { version = "0.8.2", features = [
    "runtime-tokio-rustls",
    "macros",
    "chrono",
], optional = true }

# === JWT Authentication (optional, requires "jwt-auth" feature) ===
jsonwebtoken = { version = "9", optional = true }

# === Rate Limiting (optional, requires "rate-limiting" feature) ===
tower_governor = { version = "0.4", optional = true }
governor = { version = "0.6", optional = true }

# === Background Jobs (optional, requires "background-jobs" feature) ===
tokio-cron-scheduler = { version = "0.14", optional = true }

# === OpenAPI Documentation (optional, requires "openapi" feature) ===
utoipa = { version = "5", features = ["axum_extras", "chrono"], optional = true }
utoipa-swagger-ui = { version = "8", features = ["axum"], optional = true }

# === Date and Time Utilities ===
chrono = { version = "0.4.38", features = ["serde"] }

# === Validation ===
regex = "1.10"

# === Development Dependencies ===
[dev-dependencies]
tokio-test = "0.4.4"
serial_test = "3.1"

# === Binary Definitions ===
[[bin]]
name = "talos_server"
path = "src/server/main.rs"
required-features = ["server"]

[[bin]]
name = "talos_client"
path = "src/client/main.rs"
